# Visual-Anomaly-Detection

./: .gitignore  README.md  implementation_plan.md  pyproject.toml
configs/: autoencoder.yaml  efficientad.yaml  patchcore.yaml  stfpm.yaml
notebooks/: 01_explore_and_train.ipynb  02_autoencoder_from_scratch.ipynb  03_benchmark_and_compare.ipynb
scripts/: benchmark_all.py  demo.py  evaluate.py  train.py
src/: __init__.py
src/data/: __init__.py  custom_dataset.py  mvtec_explorer.py
src/evaluation/: __init__.py  benchmark.py  metrics.py  visualize.py
src/models/: autoencoder.py  model_factory.py
src/training/: __init__.py  train_anomalib.py  train_autoencoder.py
src/utils/: __init__.py  config.py
tests/: test_phase1.py  test_phase2.py  test_phase3.py
