[project]
name = "tier2-anomaly-detection"
version = "0.1.0"
description = "Visual Anomaly Detection — PatchCore, EfficientAD, STFPM & Custom Autoencoder on MVTec AD"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anomalib>=1.2.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "opencv-python>=4.11.0",
    "matplotlib>=3.10.0",
    "seaborn>=0.13.2",
    "scikit-learn>=1.8.0",
    "pyyaml>=6.0.3",
    "tqdm>=4.67.0",
    "gradio>=5.0.0",
    "pandas>=2.3.0",
    "tabulate>=0.9.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
